--- a/styles/QuestionForm.module.css
+++ b/styles/QuestionForm.module.css
@@ -1,10 +1,13 @@
 .form {
 	display: inline-block;
+	max-width: 100vw;
 }
 
 .form > * {
-	font-size: 30pt;
+	font-size: 15pt;
 	margin: 0;
 	padding: 5px 10px;
 	height: 100%;
+	width: 80vw;
+	max-width: 600px;
 }
