goal countdown (with 50 as default)
- added today counter that keeps track of # of questions logged today!
- added default goal of questions (50)
- added ability for each person to have a custom goal
- installed sass
- better styling for questions + question form
- added utils file w/isTimestampToday

--- a/styles/Question.module.scss
+++ b/styles/Question.module.scss
@@ -1,6 +1,10 @@
 .question {
 	position: relative;
-	padding-left: 20px;
+	padding: 5px 20px;
+
+	&:not(.today) {
+		background-color: #eee;
+	}
 }
 
 .delete {
@@ -10,6 +14,8 @@
 	display: none;
 }
 
-.hovered .delete {
-	display: initial;
+.hovered {
+	.delete {
+		display: initial;
+	}
 }
