--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,20 @@
 a {
-	display: inline-block;
-	color: #555;
-	padding: 10px;
+  display: inline-block;
+  color: #555;
+  padding: 10px;
 }
 
 main {
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-start;
-	align-items: center;
-	margin: 0;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  margin: 0;
 }
