--- a/styles/ProgressBar.module.scss
+++ b/styles/ProgressBar.module.scss
@@ -1,10 +1,10 @@
 .outer {
   background-color: lightgray;
   height: 25px;
-  width: 90%;
-  max-width: 500px;
+  width: 100%;
+  // max-width: 500px;
   margin: auto;
-  border-radius: 50px;
+  border-radius: 0px;
   position: relative;
 }
 
